# fastapi-tracker

./: .gitignore  README.md  pyproject.toml
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/src/trackerapi/: database.py  main.py  models.py
backend/src/trackerapi/core/: config.py
backend/tests/: conftest.py
backend/tests/api/: test_root_endpoint.py
backend/tests/core/: test_config.py
backend/tests/models/: test_user_model.py
