[tool.poetry]
name = "trackerapi"
version = "0.1.0"
description = "Fastapi Activity Tracking app"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "trackerapi", from = './src' },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.22"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
pytest = "^6.2.4"
mypy = "^0.910"
flake8 = "^3.9.2"
pytest-cov = "^2.12.1"
sqlalchemy-stubs = "^0.4"

[tool.mypy]
plugins = [
    'pydantic.mypy',
    'sqlmypy'
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
